<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingRight="@dimen/horizontal_inner_padding" >

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@drawable/empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="4dp" >

        <TextView
            android:id="@+id/recipe_name"
            style="@style/RecipeNameTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="2"
            android:text="Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/horizontal_inner_padding" >

            <LinearLayout
                android:id="@+id/recipe_prep_time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/prep"
                    android:textColor="#99333333"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recipe_prep_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="999 min."
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#333333" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recipe_cook_time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/cook"
                    android:textColor="#99333333"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recipe_cook_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="10 min."
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#333333" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recipe_total_time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="@string/total"
                    android:textColor="#99333333"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recipe_total_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="10 min."
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#333333" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>